@@ -1,3 +1,11 @@
+Tue Aug 10 17:46:16 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/fe/fe_init.cpp(fe_populate_global_scope):
+        
+          Put "omg.org" on the pragma prefix stack temporarily
+          so it will be applied when creating CORBA module
+          and its contents.
+
 Tue Aug 10 12:24:31 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * tests/IDL_Test/included.idl:
